        for control flow. For instance evaluating a return() expression within a
        frame environment returns from that frame rather than from the
        Rcpp_eval() call.

        * inst/include/Rcpp/macros/macros.h: Leave the try/catch scope before
        resuming jump to ensure proper destruction of the exception reference.

2018-05-09  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.17
        * inst/NEWS.Rd: Release 0.12.17
        * inst/bib/Rcpp.bib: Release 0.12.17
        * vignettes/Rcpp.bib: Release 0.12.17
        * inst/include/Rcpp/config.h: Release 0.12.17

        * debian/*: Changes for Debian release of 0.12.16

2018-05-05  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-FAQ.Rmd: Also mention TAS paper
	* vignettes/Rcpp-introduction.Rmd: Idem
	* vignettes/Rcpp-jss-2011.Rnw: Idem

2018-05-04  Romain Francois  <romain@purrple.cat>

	* inst/include/Rcpp/String.h: Extend StoragePolicy support
	* inst/include/Rcpp/vector/00_forward_proxy.h: Idem
	* inst/include/Rcpp/vector/Vector.h: Idem
	* inst/include/Rcpp/vector/const_generic_proxy.h: Idem
	* inst/include/Rcpp/vector/const_string_proxy.h: Idem
	* inst/include/Rcpp/vector/generic_proxy.h: Idem
	* inst/include/Rcpp/vector/proxy.h: Idem
	* inst/include/Rcpp/vector/string_proxy.h: Idem
	* inst/include/Rcpp/vector/traits.h: Idem

	* inst/unitTests/cpp/Vector.cpp: New test
	* inst/unitTests/runit.Vector.R: Idem

2018-04-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

2018-04-25  Romain Francois  <romain@purrple.cat>

	* inst/include/Rcpp/Benchmark/Timer.h: If defined, undefine FALSE

2018-04-17  Ralf Stubner  <ralf.stubner@daqana.com>

	* vignettes/Rcpp-attributes.Rmd: Replace back-quote with straight quote
	* vignettes/Rcpp-modules.Rmd: Idem

2018-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* .editorconfig: Added support for editorconfig.org
	* .clang_format: Removed
	* .dir-locals.el: Removed
